--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="mask"></div>
 
         <div class="palette-container">
-            <div class="palette palette1">
+            <div class="palette palette1" draggable="true">
                 <span></span>
                 <button class="lock" data-lock="false">
                     <i class="fa-solid fa-lock-open"></i><i class="fa-solid fa-lock"></i>
