--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <button class="lock" data-lock="false">
                     <i class="fa-solid fa-lock-open"></i><i class="fa-solid fa-lock"></i>
                 </button>
-                <button class="copy"><i class="fa-solid fa-clone"></i></button>
+                <!-- <button class="copy"><i class="fa-solid fa-clone"></i></button> -->
                 <button class="move">
                     <i class="fa-solid fa-arrows-left-right"></i> <i class="fa-solid fa-arrows-up-down"></i>
                 </button>
